Avoid flash of open navigation on mobile page load

--- a/src/components/Navigation/index.module.css
+++ b/src/components/Navigation/index.module.css
@@ -19,7 +19,7 @@
 }
 
 @media (--small) {
-  .Navigation {
+  .Navigation:not(.isClosed) {
     min-height: calc(100vh - var(--retune-masthead-h));
   }
 }
